--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div id="content"></div>
-<script src="build/bundle.fluxury.min.js"></script>
+<script src="build/bundle.fluxury.js"></script>
+<script src="//localhost:35729/livereload.js"></script>
 </body>
 </html>
