--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-<div id="content"></div>
-<script src="build/bundle.fluxury.js"></script>
-<script src="//localhost:35729/livereload.js"></script>
+  <div id="content"></div>
+  <script src="build/bundle.fluxury.js"></script>
+  <!-- To Be Removed in prod. -->
+  <script src="//localhost:35729/livereload.js"></script>
 </body>
 </html>
