--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="content"></div>
-  <script src="build/bundle.fluxury.js"></script>
+  <script src="build/bundle.fluxury.min.js"></script>
   <!-- To Be Removed in prod. -->
   <script src="//localhost:35729/livereload.js"></script>
 </body>
