--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
   <link rel="stylesheet" href="assets/css/piratebadge.css">
 </head>
 <body>
-  <div id="content"></div>
-  <script src="build/bundle.fluxury.min.js"></script>
-  <!-- To Be Removed in prod. -->
-  <script src="//localhost:35729/livereload.js"></script>
+  <script src="build/bundle.fluxury.js"></script>
 </body>
 </html>
