--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
     <title>Fluxury by jim-y</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
+
+    <header>
+      <div class="container">
         <h1>Fluxury</h1>
-        <p>A React - Flux starter kit.</p>
+        <h2>A React - Flux starter kit.</h2>
 
-        <p class="view"><a href="https://github.com/jim-y/fluxury">View the Project on GitHub <small>jim-y/fluxury</small></a></p>
+        <section id="downloads">
+          <a href="https://github.com/jim-y/fluxury/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/jim-y/fluxury/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/jim-y/fluxury" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-
-        <ul>
-          <li><a href="https://github.com/jim-y/fluxury/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/jim-y/fluxury/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/jim-y/fluxury">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+    <div class="container">
+      <section id="main_content">
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -60,12 +60,8 @@ $ git checkout gh-pages
 
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/jim-y">jim-y</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
   </body>
 </html>
