--- a/index.html
+++ b/index.html
@@ -29,36 +29,68 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-fluxurys-project-page" class="anchor" href="#welcome-to-fluxurys-project-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Fluxury's project-page.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>This is a short share-how about Fluxury's implementation details. I plan to keep it clear and simple.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="build-tool" class="anchor" href="#build-tool" aria-hidden="true"><span class="octicon octicon-link"></span></a>Build tool</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>I switched from <code>Grunt</code> to <code>npm</code> because I wanted to get rid of the numerous grunt-* dependencies. Using npm as a build tool in such a small project (as well as in biggers) is easy, and you don't need any dependency doing it. For more about this topic read this blog post: <a href="http://blog.keithcirkel.co.uk/how-to-use-npm-as-a-build-tool/">How to use npm as a build tool</a></p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="used-technologies" class="anchor" href="#used-technologies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Used technologies</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p><strong>browserify</strong>: for bundling up CommonJS modules for the browser
+<strong>react</strong>: for achieving component driven programming style
+<strong>flux</strong>: for managing data flow through the application. ~Observer pattern, also known as Publish-Subscribe
+<strong>immutable</strong>: to hold the application state in immutable data sets
+<strong>react-router</strong>: I found this library really handy for inter-screen transitions</p>
+
+<p>Immutability generally makes your state management side effect free by creating new data sets on every mutations. In the skeleton app I've just made some pin-points on how to use the library. React-router makes the transitions between your pages/screens a charm. Ever made your mind around how to switch pages in an SPA? This library can be an answer to your questions. </p>
+
+<p>In short, you make a list about your routes/pages, like [home, contact, shop, projects, etc...], and you define handler React-components for these routes, and you will put a placeholder (Director) somewhere in your masterpage. Then, whenever you want redirect the user from page A to page B, you only need to create a Link component which tells the router where you want to navigate. (e.g Home). Then, the placehold will hold a new value, and that will be your component defined for the Home route.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="devdependencies" class="anchor" href="#devdependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Devdependencies</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p><strong>jsxhint</strong>: for linting your code.
+<strong>node-jscs</strong>: jscs needs to be pre-installed globally, but the app holds a build target, and an airbnb preset for coding-style validation. Sadly jscs doesn't support ES6 well, so we get some strange errors for our ES6 classes in the store(s).
+<strong>reactify</strong>: browserify-transform for ES6-to-ES5 compilation.
+<strong>uglify</strong>: minifying the codebase. TBD
+<strong>watchify</strong>: for live-rebuild. TBD</p>
+
+<h3>
+<a id="details" class="anchor" href="#details" aria-hidden="true"><span class="octicon octicon-link"></span></a>Details</h3>
+
+<p>I used ES6 classes in the Store, and ES6 destructuring among the app. </p>
+
+<p>Destructuring:</p>
+
+<div class="highlight highlight-js"><pre>{ Home, Contact, PirateBadge } <span class="pl-k">=</span> <span class="pl-s3">require</span>(<span class="pl-s1"><span class="pl-pds">'</span>./components/Components<span class="pl-pds">'</span></span>)</pre></div>
+
+<p>This is the same, as writing:</p>
+
+<div class="highlight highlight-js"><pre>Home <span class="pl-k">=</span> <span class="pl-s3">require</span>(<span class="pl-s1"><span class="pl-pds">'</span>./components/Components<span class="pl-pds">'</span></span>).Home,
+Contact <span class="pl-k">=</span> <span class="pl-s3">require</span>(<span class="pl-s1"><span class="pl-pds">'</span>./components/Components<span class="pl-pds">'</span></span>).Contact,
+PirateBadge <span class="pl-k">=</span> <span class="pl-s3">require</span>(<span class="pl-s1"><span class="pl-pds">'</span>./components/Components<span class="pl-pds">'</span></span>).PirateBadge</pre></div>
+
+<h3>
+<a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span class="octicon octicon-link"></span></a>Disclaimer</h3>
+
+<p>The rewrital is not finished, yet. Some smaller parts, and some modifications needs to be done (TBD). While I encourage you to create a pull-request if you find something, I will try to solve these missings as soon as possible.</p>
+
+<p>Cheers, Jim</p>
+
+<h3>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
+
+<ul>
+<li><a href="https://twitter.com/attilakling">@attilakling</a></li>
+<li><a href="http://prohardver.hu/tag/jim-y.html">Jim-Y@prohardver</a></li>
+<li><a href="attila.kling@gmail.com">Email</a></li>
+<li><a href="http://jim-y.me/">Blog</a></li>
+</ul>
       </section>
     </div>
 
