Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,11 +41,18 @@
 <h3>
 <a id="used-technologies" class="anchor" href="#used-technologies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Used technologies</h3>
 
-<p><strong>browserify</strong>: for bundling up CommonJS modules for the browser
-<strong>react</strong>: for achieving component driven programming style
-<strong>flux</strong>: for managing data flow through the application. ~Observer pattern, also known as Publish-Subscribe
-<strong>immutable</strong>: to hold the application state in immutable data sets
-<strong>react-router</strong>: I found this library really handy for inter-screen transitions</p>
+<ul>
+<li>
+<strong>browserify</strong>: for bundling up CommonJS modules for the browser</li>
+<li>
+<strong>react</strong>: for achieving component driven programming style</li>
+<li>
+<strong>flux</strong>: for managing data flow through the application. ~Observer pattern, also known as Publish-Subscribe</li>
+<li>
+<strong>immutable</strong>: to hold the application state in immutable data sets</li>
+<li>
+<strong>react-router</strong>: I found this library really handy for inter-screen transitions</li>
+</ul>
 
 <p>Immutability generally makes your state management side effect free by creating new data sets on every mutations. In the skeleton app I've just made some pin-points on how to use the library. React-router makes the transitions between your pages/screens a charm. Ever made your mind around how to switch pages in an SPA? This library can be an answer to your questions. </p>
 
@@ -54,11 +61,18 @@
 <h3>
 <a id="devdependencies" class="anchor" href="#devdependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Devdependencies</h3>
 
-<p><strong>jsxhint</strong>: for linting your code.
-<strong>node-jscs</strong>: jscs needs to be pre-installed globally, but the app holds a build target, and an airbnb preset for coding-style validation. Sadly jscs doesn't support ES6 well, so we get some strange errors for our ES6 classes in the store(s).
-<strong>reactify</strong>: browserify-transform for ES6-to-ES5 compilation.
-<strong>uglify</strong>: minifying the codebase. TBD
-<strong>watchify</strong>: for live-rebuild. TBD</p>
+<ul>
+<li>
+<strong>jsxhint</strong>: for linting your code.</li>
+<li>
+<strong>node-jscs</strong>: jscs needs to be pre-installed globally, but the app holds a build target, and an airbnb preset for coding-style validation. Sadly jscs doesn't support ES6 well, so we get some strange errors for our ES6 classes in the store(s).</li>
+<li>
+<strong>reactify</strong>: browserify-transform for ES6-to-ES5 compilation.</li>
+<li>
+<strong>uglify</strong>: minifying the codebase. TBD</li>
+<li>
+<strong>watchify</strong>: for live-rebuild. TBD</li>
+</ul>
 
 <h3>
 <a id="details" class="anchor" href="#details" aria-hidden="true"><span class="octicon octicon-link"></span></a>Details</h3>
