Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ PirateBadge <span class="pl-k">=</span> <span class="pl-s3">require</span>(<span
 <ul>
 <li><a href="https://twitter.com/attilakling">@attilakling</a></li>
 <li><a href="http://prohardver.hu/tag/jim-y.html">Jim-Y@prohardver</a></li>
-<li><a href="attila.kling@gmail.com">Email</a></li>
+<li><a href="mailto:attila.kling@gmail.com">Email</a></li>
 <li><a href="http://jim-y.me/">Blog</a></li>
 </ul>
       </section>
