Added less support and modified the build process

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Fluxury</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/main.css">
-  <link rel="stylesheet" href="assets/css/piratebadge.css">
+  <link rel="stylesheet" href="build/main.min.css">
+  <link rel="stylesheet" href="build/piratebadge.min.css">
 </head>
 <body>
   <script src="build/bundle.fluxury.js"></script>
